# pdf-converter

./: Makefile  logger.py  main.py  middleware.py  pyproject.toml  utils.py  vizit.py
static/: styles.css
templates/: base.html  convert.html  dropzone.html  index.html  merge.html  preview.html  split.html
