[tool.poetry]
name = "pdf-converter"
version = "0.1.0"
description = ""
authors = ["al-ov73 <klever1987@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.115.12"
pypdf2 = "^3.0.1"
uvicorn = "^0.34.2"
pillow = "^11.2.1"
pymupdf = "^1.26.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"